<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/idLlBtnMyTrips"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintBottom_toTopOf="@+id/idLlBtnReports"
        android:text="@string/strBtnMyTrips"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"

        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:background="@drawable/buttonshape"
        android:shadowColor="#63CCD6"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:layout_marginBottom="25dp"/>

    <Button
        android:id="@+id/idLlBtnReports"
        tools:layout_conversion_absoluteHeight="48dp"
        tools:layout_conversion_absoluteWidth="88dp"
        tools:layout_conversion_absoluteX="148dp"
        tools:layout_conversion_absoluteY="259dp"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintBottom_toTopOf="@+id/idLlBtnAddExpenses"
        app:layout_constraintTop_toBottomOf="@+id/idLlBtnMyTrips"
        android:text="@string/strBtnReports"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"

        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:background="@drawable/buttonshape"
        android:shadowColor="#63CCD6"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:layout_marginBottom="25dp"/>

    <Button
        android:id="@+id/idLlBtnAddExpenses"
        tools:layout_conversion_absoluteHeight="48dp"
        tools:layout_conversion_absoluteWidth="88dp"
        tools:layout_conversion_absoluteX="148dp"
        tools:layout_conversion_absoluteY="307dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idLlBtnReports"
        android:text="@string/strBtnAddExpenses"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"

        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:background="@drawable/buttonshape"
        android:shadowColor="#63CCD6"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5" />

</android.support.constraint.ConstraintLayout>